--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "next-tailwind-motion",
+  "name": "field-2022",
   "description": "A simple Next.js starter kit with TailwindCSS (JIT) and Framer Motion preconfigured",
   "author": "Sam Goddard <hello@samgoddard.co.uk> (https://samgoddard.co.uk)",
   "version": "1.0.0",
@@ -16,29 +16,33 @@
     "next",
     "tailwind",
     "framer",
-    "motion",
-    "preact"
+    "motion"
   ],
   "homepage": "https://sg-next-tailwind-motion.vercel.app/",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
+    "postbuild": "next-sitemap",
     "start": "next start"
   },
   "dependencies": {
-    "framer-motion": "^4.1.17",
-    "next": "^12.0.8",
-    "next-seo": "^4.26.0",
+    "@studio-freight/hamo": "^0.4.43",
+    "@studio-freight/lenis": "^0.2.18",
+    "framer-motion": "^7.6.0",
+    "next": "^12.3.1",
+    "next-seo": "^5.5.0",
+    "next-sitemap": "^3.1.29",
     "postcss-import": "^14.0.0",
     "postcss-nested": "^5.0.5",
     "postcss-preset-env": "^6.7.0",
-    "preact": "^10.5.13",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react": "^18.1.0",
+    "react-dom": "^18.1.0",
+    "zustand": "^4.1.3"
   },
   "devDependencies": {
+    "@svgr/webpack": "^6.4.0",
     "autoprefixer": "^10.4.2",
     "postcss": "^8.4.5",
-    "tailwindcss": "^3.0.13"
+    "tailwindcss": "^3.2.1"
   }
 }
