--- a/jsconfig.json
+++ b/jsconfig.json
@@ -8,6 +8,7 @@
       "@/public/*": ["public/*"],
       "@/context/*": ["context/*"],
       "@/services/*": ["services/*"],
+      "@/icons/*": ["public/icons/*"],
     }
   },
   "exclude": ["node_modules", "dist"],
