--- a/package.json
+++ b/package.json
@@ -25,8 +25,6 @@
     "start": "next start"
   },
   "dependencies": {
-    "@studio-freight/hamo": "^0.4.43",
-    "@studio-freight/lenis": "^0.2.18",
     "framer-motion": "^7.6.0",
     "next": "^12.3.1",
     "next-seo": "^5.5.0",
@@ -35,8 +33,7 @@
     "postcss-nested": "^5.0.5",
     "postcss-preset-env": "^6.7.0",
     "react": "^18.1.0",
-    "react-dom": "^18.1.0",
-    "zustand": "^4.1.3"
+    "react-dom": "^18.1.0"
   },
   "devDependencies": {
     "@svgr/webpack": "^6.4.0",
