--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "postcss-nested": "^5.0.5",
     "postcss-preset-env": "^6.7.0",
     "react": "^18.1.0",
-    "react-dom": "^18.1.0"
+    "react-dom": "^18.1.0",
+    "react-just-parallax": "^3.1.14"
   },
   "devDependencies": {
     "@svgr/webpack": "^6.4.0",
