messing with splittext

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@cyriacbr/react-split-text": "^1.0.0",
     "framer-motion": "^7.6.0",
     "next": "^12.3.1",
     "next-seo": "^5.5.0",
