--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "postcss-nested": "^5.0.5",
     "postcss-preset-env": "^6.7.0",
     "react": "^18.1.0",
+    "react-div-100vh": "^0.7.0",
     "react-dom": "^18.1.0",
     "react-just-parallax": "^3.1.14"
   },
