--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "react": "^18.1.0",
     "react-div-100vh": "^0.7.0",
     "react-dom": "^18.1.0",
-    "react-just-parallax": "^3.1.14"
+    "react-just-parallax": "^3.1.14",
+    "sharp": "^0.31.1"
   },
   "devDependencies": {
     "@svgr/webpack": "^6.4.0",
