--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
   },
   "dependencies": {
     "@cyriacbr/react-split-text": "^1.0.0",
+    "embla-carousel-class-names": "^7.0.4",
+    "embla-carousel-react": "^7.0.4",
     "framer-motion": "^7.6.0",
     "next": "^12.3.1",
     "next-seo": "^5.5.0",
@@ -34,6 +36,7 @@
     "postcss-nested": "^5.0.5",
     "postcss-preset-env": "^6.7.0",
     "react": "^18.1.0",
+    "react-device-detect": "^2.2.2",
     "react-div-100vh": "^0.7.0",
     "react-dom": "^18.1.0",
     "react-just-parallax": "^3.1.14",
