--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-device-detect": "^2.2.2",
     "react-div-100vh": "^0.7.0",
     "react-dom": "^18.1.0",
+    "react-fast-marquee": "^1.3.5",
     "react-just-parallax": "^3.1.14",
     "sharp": "^0.31.1"
   },
