--- a/package.json
+++ b/package.json
@@ -26,10 +26,13 @@
   },
   "dependencies": {
     "@cyriacbr/react-split-text": "^1.0.0",
+    "@sanity/block-content-to-react": "^3.0.0",
     "embla-carousel-class-names": "^7.0.4",
     "embla-carousel-react": "^7.0.4",
     "framer-motion": "^7.6.0",
     "next": "^12.3.1",
+    "next-sanity": "^1.0.9",
+    "next-sanity-image": "^5.0.0",
     "next-seo": "^5.5.0",
     "next-sitemap": "^3.1.29",
     "postcss-import": "^14.0.0",
