--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "framer-motion": "^7.6.0",
     "next": "^12.3.1",
     "next-sanity": "^1.0.9",
-    "next-sanity-image": "^5.0.0",
+    "next-sanity-image": "4.1.0",
     "next-seo": "^5.5.0",
     "next-sitemap": "^3.1.29",
     "postcss-import": "^14.0.0",
@@ -44,6 +44,7 @@
     "react-dom": "^18.1.0",
     "react-fast-marquee": "^1.3.5",
     "react-just-parallax": "^3.1.14",
+    "react-modal": "^3.16.1",
     "sharp": "^0.31.1"
   },
   "devDependencies": {
