--- a/package.json
+++ b/package.json
@@ -45,7 +45,9 @@
     "react-fast-marquee": "^1.3.5",
     "react-just-parallax": "^3.1.14",
     "react-modal": "^3.16.1",
-    "sharp": "^0.31.1"
+    "react-select": "^5.6.0",
+    "sharp": "^0.31.1",
+    "slugify": "^1.6.5"
   },
   "devDependencies": {
     "@svgr/webpack": "^6.4.0",
